--- a/style.css
+++ b/style.css
@@ -444,3 +444,9 @@ small.errors {
   font-size: 18px;
   font-weight: 700;
 }
+
+.lekha{
+  width: 370px;
+  margin-left: -52px;
+  margin-top: -220px;
+}
