--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 2000px) {
+/* @media only screen and (max-width: 2000px) {
   .investementTitle2 {
     display: none !important;
   }
@@ -14,7 +14,10 @@
     margin-left: -52px;
     margin-top: -330px;
   }
-}
+  .navbar-brand {
+    margin-left: -60px;
+  }
+} */
 
 @media only screen and (max-width: 1200px) {
   .containers {
@@ -69,7 +72,7 @@
   }
 }
 
-@media only screen and (max-width: 1330px) {
+/* @media only screen and (max-width: 1330px) {
   .img-fluid {
     height: 700px !important;
   }
@@ -79,7 +82,7 @@
     height: 700px !important;
     width: 380px !important;
   }
-}
+} */
 /* @media only screen and (max-width: 1247px) {
   .img-fluid {
     height: 700px !important;
@@ -152,6 +155,12 @@
   }
   .investementTitle1 {
     display: none !important;
+  }
+  .navbar-brand {
+    margin-left: 0px;
+  }
+  .navbar-brand {
+    margin-left: 0px;
   }
 }
 @media only screen and (max-width: 950px) {
